[build-system]
build-backend = "pdm.pep517.api"
requires = [
    "pdm-pep517>=1.0.0",
]

[tool.black]
exclude = "/(\n    \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.nox\n  | \\.tox\n  | \\.venv\n  | _build\n  | buck-out\n  | build\n  | dist\n)/\n"
include = "\\.pyi?$"

[tool.pdm]

[tool.pdm.build]
excludes = [
    "contrib",
]

    package-dir = "src"
[project]
authors = [
    { name = "Joshua Welch", email = "welchjd@med.umich.edu" },
    { name = "Lu Lu", email = "luluhz@umich.edu" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
]
  dependencies = [
      "adjustText",
      "anndata",
      "annoy",
      "bokeh",
      "colorcet",
      "datashader",
      "goatools",
      "h5sparse",
      "holoviews",
      "leidenalg",
      "llvmlite >= 0.40.0rc1",
      "louvain",
      "matplotlib",
      "mygene",
      "numexpr",
      "numba >= 0.57.0rc1",
      "numpy",
      "pandas",
      "plotnine",
      "python-igraph",
      "scikit-learn",
      "scipy",
      "seaborn",
      "umap-learn",
      "setuptools>=68.0.0",
  ]
description = "The Python version of LIGER package."
keywords = [
    "LIGER",
]
maintainers = [
    { name = "Andrew Robbins", email = "robbiand@med.umich.edu" },
]
name = "pyliger"
readme = "README.md"
requires-python = "<3.12, >=3.8"
version = "0.2.0b1"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://welch-lab.github.io"
repository = "https://github.com/welch-lab/pyliger"
